--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,22 @@
+certifi==2020.6.20
+chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
 Django==2.2
+django-filter==2.4.0
+django-guardian==2.3.0
+djangorestframework==3.12.1
+djangorestframework-jwt==1.11.0
+idna==2.10
+itypes==1.2.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
 mysql-connector==2.2.9
 mysqlclient==2.0.1
+PyJWT==1.7.1
 PyMySQL==0.10.1
-
+pytz==2020.1
+requests==2.24.0
+sqlparse==0.4.1
+uritemplate==3.0.1
+urllib3==1.25.11
