--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\python37\\python.exe"
+    "python.pythonPath": "D:\\ProgramData\\Miniconda3\\envs\\CirculatingWaterSys\\python.exe"
 }
